# PIO

./: .gitignore  README.md  pyproject.toml
docs/: claude-code-spirit.md  maintenance-guide.md  prompt-index.md  system-map.md
tests/: test_artifacts.py  test_branch_create.py  test_chat.py  test_chat_compression.py  test_checkpoints.py  test_codechange_materialize_repair.py  test_delivery.py  test_delivery_plan_ordering.py  test_determine_test_commands_prefers_node_over_tests_dir.py  test_doctor_preflight_bin_shims.py  test_env_engineer_probe.py  test_execution_work_orders.py  test_failure_repo_excerpts.py  test_fix_loop_autofix.py  test_fix_loop_autohint.py  test_fix_loop_budget.py  test_fix_loop_checkpoint.py  test_fix_loop_focus_and_lessons.py  test_fix_runtime.py  test_fix_triage.py  test_implementation_blueprint.py  test_implementation_lead_cc.py  test_incident_capsule.py  test_intent_expansion.py  test_ledger.py  test_mock_run.py  test_node_bin_missing_exe_autofix.py  test_node_preflight.py  test_ownership_gate.py  test_planning_runtime.py  test_policy_chat_only.py  test_provider_json_parsing.py  test_python_env_and_scope.py  test_resume.py  test_route_downgrade.py  test_routes.py  test_sandbox_cli.py  test_scan.py  test_secrets.py  test_spawn_unknown_autofix.py  (+3 more)
vibe/: branching.py  cli.py  config.py  context.py  delivery.py  manifests.py  orchestrator.py  ownership.py  policy.py  repo.py  routes.py  scan.py  secrets.py  style.py  text.py  toolbox.py
vibe/agents/: base.py  (+1 more)
vscode-vibe/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
(+30 files in other folders)
