[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coding"
version = "0.1.0"
description = "DeepSeek + Qwen vibe coding / multi-agent orchestrator (MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.6.0",
  "openai>=1.30.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
vibe = "vibe.cli:app"

[tool.setuptools.packages.find]
include = ["vibe*"]
